# parallel-final-project

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
include/: attention.h  io_util.h  kv_cache.h  quantization.h
python/: capture_kv.py  check_correctness.py  parse_ncu.py  plot_extras.py  plot_results.py  run_real_kv_bench.py
scripts/: ncu_capture.sh  ncu_extract_long.py  run_a100.sh
src/: attention_baseline.cu  attention_int8_fused.cu  attention_int8_fused_online.cu  benchmark.cpp  kv_compress.cu  kv_reconstruct.cu  main.cpp
